--- a/AP_Stats_Winter_Project.ipynb
+++ b/AP_Stats_Winter_Project.ipynb
@@ -19,8 +19,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/evilpegasus/APStats/blob/master/AP_Stats_Winter_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,8 +29,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "u7m9UknVScQA",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "u7m9UknVScQA"
       },
       "source": [
         "# Parser\n"
@@ -38,90 +38,51 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "MrKONMMI2HvV",
-        "colab_type": "code",
-        "outputId": "f144f206-1a6b-44e5-d70b-6d529ce75d8d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
-        }
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": 0,
+      "execution_count": null,
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
+          "evalue": "Error: Jupyter notebook failed to launch. \r\nError: Jupyter server crashed. Unable to connect. \r\nError code from jupyter: 0\n[I 23:57:20.876 NotebookApp] The port 8888 is already in use, trying another port.\n\n[I 23:57:20.877 NotebookApp] The port 8889 is already in use, trying another port.\n\n[I 23:57:20.877 NotebookApp] The port 8890 is already in use, trying another port.\n\n[I 23:57:20.878 NotebookApp] The port 8891 is already in use, trying another port.\n\n[I 23:57:20.878 NotebookApp] The port 8892 is already in use, trying another port.\n\nFailed to run jupyter as observable with args notebook --no-browser --notebook-dir=C:\\Users\\mingf\\AppData\\Local\\Temp\\7f8f4cd5-c3cb-4a8d-8961-4d6953ec6067 --config=C:\\Users\\mingf\\AppData\\Local\\Temp\\7f8f4cd5-c3cb-4a8d-8961-4d6953ec6067\\jupyter_notebook_config.py --NotebookApp.iopub_data_rate_limit=10000000000.0\n",
+          "output_type": "error"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ee0-l-TiRdKg",
-        "colab_type": "code",
-        "colab": {}
-      },
+      ],
       "source": [
         "import pandas as pd\n",
         "from pandas import ExcelWriter\n",
         "from pandas import ExcelFile"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "n7t4f6kLDhRa",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "n7t4f6kLDhRa"
       },
+      "outputs": [],
       "source": [
         "#display 500 rows and 500 columns\n",
         "pd.set_option('display.max_rows', 500)\n",
         "pd.set_option('display.max_columns', 500)\n",
         "pd.set_option('display.width', 1000)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
-        "id": "I2VUORJW2EIQ",
-        "colab_type": "code",
-        "outputId": "b2ff1d4a-8409-4eef-8259-5fa33ddf5b9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "colab_type": "code",
+        "id": "I2VUORJW2EIQ",
+        "outputId": "b2ff1d4a-8409-4eef-8259-5fa33ddf5b9b"
       },
-      "source": [
-        "df = pd.read_excel('/WA_School_Personnel_2018-2019.xlsx', sheet_name='Districts A-G', usecols= [0, 2, 6])\n",
-        "df2 = pd.read_excel('/WA_School_Personnel_2018-2019.xlsx', sheet_name='Districts H-P', usecols= [0, 2, 6])\n",
-        "df3 = pd.read_excel('/WA_School_Personnel_2018-2019.xlsx', sheet_name='Districts Q-Z', usecols= [0, 2, 6])\n",
-        "df = df.append(df2)\n",
-        "df = df.append(df3)\n",
-        "#print\n",
-        "#print(\"Column headings:\")\n",
-        "#print(df.columns)\n",
-        "print(df)"
-      ],
-      "execution_count": 11,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "      School District              Duty Title  Total Salary\n",
@@ -138,33 +99,36 @@
             "51418          Zillah  Elem. Homeroom Teacher         62261\n",
             "\n",
             "[153854 rows x 3 columns]\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "df = pd.read_excel('/WA_School_Personnel_2018-2019.xlsx', sheet_name='Districts A-G', usecols= [0, 2, 6])\n",
+        "df2 = pd.read_excel('/WA_School_Personnel_2018-2019.xlsx', sheet_name='Districts H-P', usecols= [0, 2, 6])\n",
+        "df3 = pd.read_excel('/WA_School_Personnel_2018-2019.xlsx', sheet_name='Districts Q-Z', usecols= [0, 2, 6])\n",
+        "df = df.append(df2)\n",
+        "df = df.append(df3)\n",
+        "#print\n",
+        "#print(\"Column headings:\")\n",
+        "#print(df.columns)\n",
+        "print(df)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
       "metadata": {
-        "id": "2NTJHMxvHTaF",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "colab_type": "code",
+        "id": "2NTJHMxvHTaF",
         "outputId": "668a79fa-00c0-4295-ea82-7867c7d61cef"
       },
-      "source": [
-        "districts = df.groupby('School District').nunique()\n",
-        "print(districts)\n",
-        "#districts.to_excel('districts.xlsx')\n",
-        "\n",
-        "#Number of rows (unique districts)\n",
-        "print(districts.shape[0])"
-      ],
-      "execution_count": 21,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "                     School District  Duty Title  Total Salary\n",
@@ -491,30 +455,33 @@
             "Yelm                               1          29           782\n",
             "Zillah                             1          21           175\n",
             "321\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "districts = df.groupby('School District').nunique()\n",
+        "print(districts)\n",
+        "#districts.to_excel('districts.xlsx')\n",
+        "\n",
+        "#Number of rows (unique districts)\n",
+        "print(districts.shape[0])"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
       "metadata": {
-        "id": "i0ULz3JfJrNW",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "colab_type": "code",
+        "id": "i0ULz3JfJrNW",
         "outputId": "ce6b7684-f55e-4345-da14-a1aab6d98e17"
       },
-      "source": [
-        "sat_df = pd.read_excel('/WA _District_SAT_2019.xlsx', usecols= [0, 10])\n",
-        "print(sat_df)\n",
-        "#print(sat_df.shape[0])"
-      ],
-      "execution_count": 19,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "                                    School District  Total Score Mean\n",
@@ -764,9 +731,13 @@
             "243                           Yakima Public Schools             927.0\n",
             "244                Yelm Community School District 2             981.0\n",
             "245                      Zillah School District 205               NaN\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "sat_df = pd.read_excel('/WA _District_SAT_2019.xlsx', usecols= [0, 10])\n",
+        "print(sat_df)\n",
+        "#print(sat_df.shape[0])"
       ]
     }
   ]
