--- a/Report.tex
+++ b/Report.tex
@@ -144,7 +144,7 @@ We can reasonably assume that most randomly selected salaries will be independen
 \[ \sum_{i=0}^{x} \binom{n}{i}(p)^i(1-p)^{n-1}=0.8447 \]
 \[ 1-0.8447=0.1553 \]
 
-Therefore, the probability that a randomly selected sample of 295 teachers has more than 91 teachers with six-figure is 15.53\%. This means that the Renton School District has a relatively high concentration of high-earning secondary teachers.
+Therefore, the probability that a randomly selected sample of 295 teachers has more than 91 teachers with a six-figure salary is 15.53\%. This means that the Renton School District has a relatively high concentration of high-earning secondary teachers.
 
 \section{Conclusion}
 
